Fix display bugs and overflow. Add keyboard support

--- a/main.css
+++ b/main.css
@@ -5,13 +5,14 @@
 
 body {
   background: url(./images/stardust.png);
+  box-sizing: border-box;
 }
 
 .container {
   background: hsla( 1, 100%, 100%, 0.2);
   width: 450px;
   max-height: 600px;
-  margin: 100px auto 0 auto;
+  margin: 50px auto 0 auto;
   padding: 10px 5px;
 }
 
@@ -55,15 +56,20 @@ body {
   grid-column: 1 / 2;
   align-self: start;
   
-  font-size: 25px;
+  overflow: auto;
+  max-width: 450px;
+  max-height: 60px;
+  font-size: 18px;
 }
 
 .num-input {
   grid-area: num;
   grid-row: 3 / 4;
   grid-column: 1 / 2;
+
+  overflow: auto;
   align-self: center;
-  
+  max-width: 450px;
   font-size: 40px;
 }
 
@@ -92,7 +98,7 @@ body {
   outline:none;
 }
 
-.cell:hover, .type-btn:hover {
+.cell:hover, .type-btn:hover, .on {
   border: 1px solid #98C379;  
   background: #444349;
   color: #cac8d1;
